--- a/ChildBrowserAuth/plugin.xml
+++ b/ChildBrowserAuth/plugin.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    id="com.phonegap.plugins.childbrowser"
-    version="4.2.1">
+    id="com.cloudexplorers.phonegap.childbrowserauth"
+    version="1.0.0">
 
     <name>Child Browser with Basic Auth</name>
 
